[gd_scene load_steps=25 format=3 uid="uid://dqxnw3r7jjl1s"]

[ext_resource type="Script" uid="uid://d14ehnxlj0jud" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EventContainer/event_container.gd" id="1_vx21a"]
[ext_resource type="Material" uid="uid://b8dnd3shagyfh" path="res://CanvasShader/CornerVoid/CornerVoid.tres" id="2_h7wp5"]
[ext_resource type="Material" uid="uid://bvao31du74g1" path="res://Shader/HorizontalInterupt/HorizontalInterupt.tres" id="3_fi0y4"]
[ext_resource type="Material" uid="uid://yyon0s8snla2" path="res://Shader/CurveTextureRect.tres" id="3_v6l8k"]
[ext_resource type="Texture2D" uid="uid://ud08mpmrfob" path="res://Media/scps/typewriter.png" id="4_1e555"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="4_6n6tl"]
[ext_resource type="LabelSettings" uid="uid://nrxe2mbka1e4" path="res://Fonts/game/label_small_thick.tres" id="5_amr3s"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="6_fgcdw"]
[ext_resource type="Texture2D" uid="uid://drb5pvhu3wopb" path="res://Media/images/example_doctor.jpg" id="7_3dcps"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="7_xorcm"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="9_h7wp5"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="11_h7wp5"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="12_1e555"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5faq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgg1a"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h8mvj"]
viewport_path = NodePath("ImageControl/PanelContainer/MarginContainer/OutputTexture/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqmdq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1e555"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fm7wk"]
bg_color = Color(0.04, 0.04, 0.04, 0.772549)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ViewportTexture" id="ViewportTexture_cbyqt"]
viewport_path = NodePath("ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ProfileOutput/SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ke4bq"]

[sub_resource type="LabelSettings" id="LabelSettings_h7wp5"]
font = ExtResource("9_h7wp5")
font_size = 24
font_color = Color(0.272047, 0.272047, 0.272047, 1)
outline_size = 8
outline_color = Color(0.162066, 0.162066, 0.162066, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1e555"]
font = ExtResource("9_h7wp5")
font_size = 24
outline_size = 8
outline_color = Color(0.162066, 0.162066, 0.162066, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi0y4"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[node name="EventContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t5faq")
script = ExtResource("1_vx21a")

[node name="ColorRectBG" type="ColorRect" parent="."]
material = ExtResource("2_h7wp5")
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ImageControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ImageControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_rgg1a")

[node name="MarginContainer" type="MarginContainer" parent="ImageControl/PanelContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="OutputTexture" type="TextureRect" parent="ImageControl/PanelContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0.835294)
material = ExtResource("3_fi0y4")
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("ViewportTexture_h8mvj")
expand_mode = 1
stretch_mode = 6

[node name="SubViewport" type="SubViewport" parent="ImageControl/PanelContainer/MarginContainer/OutputTexture"]
transparent_bg = true
size = Vector2i(800, 640)

[node name="TextureRect" type="TextureRect" parent="ImageControl/PanelContainer/MarginContainer/OutputTexture/SubViewport"]
material = ExtResource("3_v6l8k")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1e555")

[node name="PanelContainer" type="PanelContainer" parent="ImageControl/PanelContainer/MarginContainer/OutputTexture"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sqmdq")

[node name="MarginContainer" type="MarginContainer" parent="ImageControl/PanelContainer/MarginContainer/OutputTexture"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HeaderLabel" type="Label" parent="ImageControl/PanelContainer/MarginContainer/OutputTexture/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "HEADER LABEL"
label_settings = ExtResource("5_amr3s")
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ImageControl/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FooterLabel" type="Label" parent="ImageControl/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "FOOTER LABEL"
label_settings = ExtResource("4_6n6tl")
horizontal_alignment = 2

[node name="ContentControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ContentControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1e555")

[node name="MarginContainer" type="MarginContainer" parent="ContentControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -180

[node name="PanelContainer" type="PanelContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_fm7wk")

[node name="MarginContainer" type="MarginContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Header" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="ContentHeaderLabel" type="Label" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Header"]
visible = false
layout_mode = 2
text = "RESEARCHER NAME"
label_settings = ExtResource("5_amr3s")
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProfileOutput" type="TextureRect" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("ViewportTexture_cbyqt")
expand_mode = 1
stretch_mode = 6

[node name="SubViewport" type="SubViewport" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ProfileOutput"]
transparent_bg = true
size = Vector2i(100, 175)

[node name="ContentProfileTextureRect" type="TextureRect" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ProfileOutput/SubViewport"]
material = ExtResource("3_v6l8k")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_3dcps")
expand_mode = 1
stretch_mode = 6

[node name="BodyContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BodyContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="DialogBtn" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BodyContainer/HBoxContainer" instance=ExtResource("6_fgcdw")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
icon = 48
is_hoverable = false

[node name="PanelContainer" type="PanelContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BodyContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ke4bq")

[node name="BodyLabelBtm" type="Label" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BodyContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 5
label_settings = SubResource("LabelSettings_h7wp5")
autowrap_mode = 3
visible_characters_behavior = 1

[node name="BodyLabelTop" type="Label" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BodyContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 5
label_settings = SubResource("LabelSettings_1e555")
autowrap_mode = 3
visible_characters_behavior = 1

[node name="Footer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 2

[node name="NextBtn" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Footer" instance=ExtResource("7_xorcm")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_fi0y4")

[node name="Label" type="Label" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "NEXT  "
label_settings = ExtResource("5_amr3s")
vertical_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionListContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NoteContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BtnControls" parent="." instance=ExtResource("11_h7wp5")]
layout_mode = 2

[node name="TransistionScreen" parent="." instance=ExtResource("12_1e555")]
z_index = 1
layout_mode = 2
